--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="photo_progress_loaded">Progress loaded</string>
     <string name="clear_search">clearSearch</string>
     <string name="search">Search</string>
+    <string name="photo_title">Photo</string>
 </resources>
