--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="search">Search</string>
     <string name="start_polling">Start Polling</string>
     <string name="stop_polling">Stop Polling</string>
+    <string name="new_picture_arriving">New Picture Arriving</string>
+    <string name="new_picture_title">New Picture Title</string>
+    <string name="new_picture_content">New Picture is Here!</string>
 </resources>
