hide noti when use app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="new_picture_title">New Picture Title</string>
     <string name="new_picture_content">New Picture is Here!</string>
     <string name="manual_check">Manual Check</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="open_by_url">Open By URL</string>
 </resources>
