modify add api google

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="open_by_url">Open By URL</string>
+    <string name="open_with_external_broswer">Open with external browser</string>
+    <string name="open_in_app_broswer">Open in-app broswer</string>
+    <string name="in_app_broswer">In app browser</string>
+    <string name="in_app_browser">In App Browser</string>
+    <string name="photo_setting">Photo Setting</string>
+
+    <string name="use_gps_setting">Use GPS Setting When Searching for Photos</string>
 </resources>
